# seeker-agent-learn

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  detail.md  download-engine.ps1  install-release.bat  install-release.ps1  monitor_training.py  release-runs.ps1
FinalProjectPresentation/: seeker_agent_learn.pptx
assets/: hyperparameters.yml
assets/learning/: config.json
assets/models/backpack/: backpack.mtl
assets/models/bull/: bull.pdn
assets/scripts/: app.py
assets/scripts/learning/: agent_dqn.py  agent_ppo.py  checkpoint_adapter.py  dqn.py  experience_replay_dqn.py  ppo_network.py  test_checkpointing.py  test_dqn.py  test_ppo.py  trajectory_buffer.py
assets/scripts/scenes/: learn_scene.py
assets/shaders/: light.fs
engine/assets/images/sprites/: apple.pdn  apple_orange_temp.pdn  male_template.pdn
engine/assets/shaders/: debug_line.fs  default_forward.fs  default_forward.vs  main.fs  main.vs
engine/assets/shaders/1/: simple.vs
engine/assets/shaders/2/: ortho.fs  ortho.vs
engine/assets/shaders/3/: debug_quad.fs  shadow_mapping_depth.fs  shadow_mapping_depth.vs  shadows_show.fs  shadows_show.vs
engine/assets/shaders/4/: deferred_shading.fs  deferred_shading.vs  g_buffer.fs  g_buffer.vs  shadows_depth_mapping.fs  shadows_depth_mapping.gs  shadows_depth_mapping.vs
engine/include/ENet/: enet.h
engine/include/Jolt/: ConfigurationString.h  Jolt.h  RegisterTypes.h
engine/include/Jolt/AABBTree/: AABBTreeBuilder.h
engine/include/Jolt/Compute/: ComputeBuffer.h  ComputeQueue.h  ComputeShader.h  ComputeSystem.h
engine/include/Jolt/Core/: ARMNeon.h  Array.h  Color.h  Core.h  HashTable.h  IncludeWindows.h  LSANSuppressions.h  LockFreeHashMap.inl  Memory.h  ObjectToIDMap.h  Prefetch.h  Profiler.h  RISCVVector.h  RTTI.h  Reference.h  Result.h  STLAllocator.h  StreamUtils.h  StridedPtr.h  TempAllocator.h  TickCounter.h  UnorderedMap.h  UnorderedMapFwd.h  UnorderedSet.h  UnorderedSetFwd.h
engine/include/Jolt/Geometry/: ConvexHullBuilder.h  EPAPenetrationDepth.h  Plane.h
engine/include/Jolt/Math/: DMat44.inl  DVec3.inl  Float4.h  Mat44.inl  Quat.h  Quat.inl  UVec4.h  UVec4.inl  Vec3.h  Vec3.inl  Vec4.h  Vec4.inl
engine/include/Jolt/ObjectStream/: ObjectStream.h  ObjectStreamBinaryIn.h  ObjectStreamBinaryOut.h  ObjectStreamTextIn.h  ObjectStreamTextOut.h  ObjectStreamTypes.h  SerializableAttributeEnum.h  SerializableAttributeTyped.h  SerializableObject.h  TypeDeclarations.h
engine/include/Jolt/Physics/: DeterminismLog.h  IslandBuilder.h  LargeIslandSplitter.h  PhysicsSettings.h  PhysicsSystem.h  PhysicsUpdateContext.h
engine/include/Jolt/Renderer/: DebugRenderer.h
engine/include/Jolt/Shaders/: HairApplyDeltaTransformBindings.h  HairApplyGlobalPose.h  HairApplyGlobalPoseBindings.h  HairCalculateCollisionPlanesBindings.h  HairCalculateRenderPositions.h  HairCalculateRenderPositionsBindings.h  HairCommon.h  HairGridAccumulateBindings.h  HairGridClearBindings.h  HairGridNormalizeBindings.h  HairIntegrate.h  HairIntegrateBindings.h  HairSkinRootsBindings.h  HairSkinVerticesBindings.h  HairStructs.h  HairTeleportBindings.h  HairUpdateRootsBindings.h  HairUpdateStrandsBindings.h  HairUpdateVelocity.h  (+11 more)
engine/include/Magic!/: globals.hpp  magic!.hpp
engine/include/assimp/: AssertHandler.h  Base64.hpp  BaseImporter.h  Bitmap.h  BlobIOSystem.h  ByteSwapper.h  ColladaMetaData.h  CreateAnimMesh.h  DefaultIOStream.h  DefaultIOSystem.h  DefaultLogger.hpp  Exceptional.h  Exporter.hpp  GenericProperty.h  GltfMaterial.h  Hash.h  IOStream.hpp  IOStreamBuffer.h  IOSystem.hpp  Importer.hpp  LineSplitter.h  LogAux.h  LogStream.hpp  Logger.hpp  MathFunctions.h  MemoryIOWrapper.h  NullLogger.hpp  ObjMaterial.h  ParsingUtils.h  Profiler.h  ProgressHandler.hpp  RemoveComments.h  SGSpatialSort.h  SceneCombiner.h  SkeletonMeshBuilder.h  SmallVector.h  SmoothingGroups.h  SmoothingGroups.inl  SpatialSort.h  StandardShapes.h  (+47 more)
engine/include/entt/: entt.hpp
engine/include/glm/: ext.hpp  fwd.hpp  glm.cppm
engine/include/nanobind/: eval.h  make_iterator.h  nanobind.h  nb_accessor.h  nb_attr.h  nb_call.h  nb_cast.h  nb_class.h  nb_defs.h  nb_descr.h  nb_enums.h  nb_error.h  nb_func.h  nb_lib.h  nb_misc.h  nb_python.h  nb_traits.h  nb_tuple.h  nb_types.h  ndarray.h  operators.h  trampoline.h  typing.h
engine/python/: LICENSE.txt
engine/python/DLLs/: python_lib.cat
engine/python/Lib/: _aix_support.py  _android_support.py  _apple_support.py  _ast_unparse.py  _collections_abc.py  _colorize.py  _compat_pickle.py  _ios_support.py  _markupbase.py  _opcode_metadata.py  _py_warnings.py  _pydatetime.py  _pydecimal.py  _pyio.py  _pylong.py  _sitebuiltins.py  _strptime.py  _threading_local.py  _weakrefset.py  annotationlib.py  argparse.py  ast.py  base64.py  bdb.py  bisect.py  bz2.py  cProfile.py  calendar.py  cmd.py  code.py  codecs.py  codeop.py  colorsys.py  compileall.py  configparser.py  contextlib.py  contextvars.py  copy.py  copyreg.py  csv.py  (+98 more)
engine/python/include/: Python.h  abstract.h  audit.h  boolobject.h  bytearrayobject.h  bytesobject.h  ceval.h  codecs.h  compile.h  complexobject.h  critical_section.h  datetime.h  descrobject.h  dictobject.h  errcode.h  exports.h  fileobject.h  fileutils.h  floatobject.h  import.h  intrcheck.h  iterobject.h  listobject.h  lock.h  longobject.h  marshal.h  memoryobject.h  methodobject.h  modsupport.h  moduleobject.h  monitoring.h  object.h  objimpl.h  opcode.h  opcode_ids.h  osdefs.h  patchlevel.h  py_curses.h  pyatomic.h  pybuffer.h  (+29 more)
engine/python/libs/: python314.def
src/: CMakeLists.txt  app.cpp  app.h  check_app_dlls.cmake  check_assets_manifest.cmake  globals.h  navigation_env.cpp  navigation_env.h  print_dll_deps.cmake  sync_assets.py  ui.h  util.h
src/components/: components.h
src/entities/: seeker.cpp  seeker.h
src/python/: init.h  navigation_env.cpp  register.cpp
src/scenes/: EdgeDangerScene.cpp  EdgeDangerScene.hpp  LearnScene.cpp  LearnScene.hpp  LoadingScene.cpp  LoadingScene.hpp  ShowCase.cpp  ShowCase.hpp  StartScene.cpp  StartScene.hpp  TestScene.cpp  TestScene.hpp  factory.cpp  factory.h
(+880 files in other folders)
